; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_g723_1_parser.c_g723_1_parse.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_g723_1_parser.c_g723_1_parse.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 }
%struct.TYPE_8__ = type { i32 }

@END_NOT_FOUND = common dso_local global i32 0, align 4
@frame_size = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_7__*, %struct.TYPE_8__*, i32**, i32*, i32*, i32)* @g723_1_parse to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @g723_1_parse(%struct.TYPE_7__* %0, %struct.TYPE_8__* %1, i32** %2, i32* %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_7__*, align 8
  %9 = alloca %struct.TYPE_8__*, align 8
  %10 = alloca i32**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca %struct.TYPE_6__*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %8, align 8
  store %struct.TYPE_8__* %1, %struct.TYPE_8__** %9, align 8
  store i32** %2, i32*** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32 %5, i32* %13, align 4
  %17 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %18 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %17, i32 0, i32 1
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %18, align 8
  store %struct.TYPE_6__* %19, %struct.TYPE_6__** %14, align 8
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %14, align 8
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i32 0, i32 0
  store i32* %21, i32** %15, align 8
  %22 = load i32, i32* @END_NOT_FOUND, align 4
  store i32 %22, i32* %16, align 4
  %23 = load i32, i32* %13, align 4
  %24 = icmp sgt i32 %23, 0
  br i1 %24, label %25, label %39

25:                                               ; preds = %6
  %26 = load i32*, i32** @frame_size, align 8
  %27 = load i32*, i32** %12, align 8
  %28 = getelementptr inbounds i32, i32* %27, i64 0
  %29 = load i32, i32* %28, align 4
  %30 = and i32 %29, 3
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i32, i32* %26, i64 %31
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %35 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = call i32 @FFMAX(i32 1, i32 %36)
  %38 = mul nsw i32 %33, %37
  store i32 %38, i32* %16, align 4
  br label %39

39:                                               ; preds = %25, %6
  %40 = load i32*, i32** %15, align 8
  %41 = load i32, i32* %16, align 4
  %42 = call i64 @ff_combine_frame(i32* %40, i32 %41, i32** %12, i32* %13)
  %43 = icmp slt i64 %42, 0
  br i1 %43, label %47, label %44

44:                                               ; preds = %39
  %45 = load i32, i32* %13, align 4
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %51, label %47

47:                                               ; preds = %44, %39
  %48 = load i32**, i32*** %10, align 8
  store i32* null, i32** %48, align 8
  %49 = load i32*, i32** %11, align 8
  store i32 0, i32* %49, align 4
  %50 = load i32, i32* %13, align 4
  store i32 %50, i32* %7, align 4
  br label %59

51:                                               ; preds = %44
  %52 = load %struct.TYPE_7__*, %struct.TYPE_7__** %8, align 8
  %53 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %52, i32 0, i32 0
  store i32 240, i32* %53, align 8
  %54 = load i32*, i32** %12, align 8
  %55 = load i32**, i32*** %10, align 8
  store i32* %54, i32** %55, align 8
  %56 = load i32, i32* %13, align 4
  %57 = load i32*, i32** %11, align 8
  store i32 %56, i32* %57, align 4
  %58 = load i32, i32* %16, align 4
  store i32 %58, i32* %7, align 4
  br label %59

59:                                               ; preds = %51, %47
  %60 = load i32, i32* %7, align 4
  ret i32 %60
}

declare dso_local i32 @FFMAX(i32, i32) #1

declare dso_local i64 @ff_combine_frame(i32*, i32, i32**, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
